package seedu.clialgo.file;

public abstract class File {
}
